traces/bug_30.txt
examples++-load/libff-mmap-semaphore.c:21: error: NULL_DEREFERENCE
  pointer `p` last assigned on line 18 could be null and is dereferenced by call to `strcpy()` at line 21, column 9.
Showing all 4 steps of the trace


examples++-load/libff-mmap-semaphore.c:17:1: start of procedure newstringcpyadds()
15.       return p;
16.   }
17. > static char *newstringcpyadds(const char *nm)
18.   {  char *p= (char*) malloc(strlen(nm)+2);
19.       if(nm[0]!='/') /* add / */

examples++-load/libff-mmap-semaphore.c:18:4: 
16.   }
17.   static char *newstringcpyadds(const char *nm)
18. > {  char *p= (char*) malloc(strlen(nm)+2);
19.       if(nm[0]!='/') /* add / */
20.       {

examples++-load/libff-mmap-semaphore.c:19:8: Taking true branch
17.   static char *newstringcpyadds(const char *nm)
18.   {  char *p= (char*) malloc(strlen(nm)+2);
19.       if(nm[0]!='/') /* add / */
             ^
20.       {
21.           strcpy(p,"/");

examples++-load/libff-mmap-semaphore.c:21:9: 
19.       if(nm[0]!='/') /* add / */
20.       {
21. >         strcpy(p,"/");
22.           strcat(p,nm);
23.       }
